# competitions

./: .gitignore  README.md  requirements.txt  setup.cfg
src/competitions/: __init__.py  main.py
tests/: test_main.py
