[metadata]
name = competitions
version = attr: competitions.__version__
description = Define and simulate a sports competition (league)
long_description = file: README.md, CHANGELOG.md, LICENSE.rst
keywords = competition
license = BSD 3-Clause License
classifiers = 
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src